# s4_core

./: .gitignore  .todo  CMakeLists.txt  LICENSE  README.md  Untitled Diagram.drawio.xml  cbt.sh  compile_to_asm.py
.github/workflows/: main.ci.yml
config/: CmakeConfig.hpp.in
example/: CMakeLists.txt
example/src/: main.cpp
src/: CMakeLists.txt  s4_core-config.cmake
src/core/: core_fwd.hpp  string_id.cpp  string_id.hpp
src/core/attr/: attribute_base.hpp  base.hpp  class.hpp  fields.hpp  fundamental.hpp  name.cpp  name.hpp  property.hpp  sizeof.hpp  struct.hpp
src/core/collections/: tuple.hpp
src/core/ctti/: ctti.hpp  tuple.hpp  type.hpp
src/core/lib/: shared.cpp  shared.hpp
src/core/rtti/: type.hpp
src/core/str/: constexpr_string.hpp  string_constant.hpp  string_id.cpp  string_id.hpp
src/core/strings/: constexpr_string.hpp  string_constant.hpp
src/core/util/: res.hpp
test/: CMakeLists.txt
test/example/: CMakeLists.txt
test/example/example/: main.cpp
test/interface/: interface.hpp
test/lib/: lib.cpp  lib.hpp
test/src/: string_id.cpp
