set(S4_CORE_EXAMPLE_INCLUDE ${CMAKE_CURRENT_LIST_DIR})

# gather source files list
file(GLOB_RECURSE S4_CORE_EXAMPLE_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${S4_CORE_EXAMPLE_INCLUDE}/*.cpp 
    ${S4_CORE_EXAMPLE_INCLUDE}/*.hpp)
GenerateSourceGoups("${S4_CORE_EXAMPLE_SRCS}")

add_executable(${S4_CORE_EXAMPLE_TARGET} ${S4_CORE_EXAMPLE_SRCS})
target_compile_features(${S4_CORE_EXAMPLE_TARGET} PUBLIC cxx_std_20)
target_include_directories(${S4_CORE_EXAMPLE_TARGET} PUBLIC ${S4_CORE_EXAMPLE_INCLUDE})
target_link_libraries(${S4_CORE_EXAMPLE_TARGET} PUBLIC ${S4_CORE_TARGET})